--- a/report/index.html
+++ b/report/index.html
@@ -208,7 +208,7 @@
                 },
                 dataConsol() {
                     $.ajax({
-                        url: 'https://b24def-tkblack.pbx-24.ru/bitrix/tkblack/api/clientReport/getDeletedPhones/',
+                        url: '.../bitrix/tkblack/api/clientReport/getDeletedPhones/',
                         data: {},
                         success: function (data) {
                             const parsedData = JSON.parse(data);
